--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+	body{
+		max-width:50rem;
+	}
   </style>
 </head>
 <body>
