--- a/index.html
+++ b/index.html
@@ -13,26 +13,37 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
 	body{
+		background-color: skyblue;
+	}
+	.content{
+		font-family: Verdana, Geneva, Tahoma, sans-serif;
+		line-height: 1.6rem;
 		max-width:50rem;
+		color: #ddd;
+		background-color: #333;
+		margin:200px auto;
+		padding:10px 10px;
 	}
   </style>
 </head>
 <body>
+  <div class="content">
+	  Simple, traffic-based pricing
+	  Sign-up for our 30-day trial. No credit card required. 
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+	  Pageviews
+	  $ /month
 
-  Pageviews
-  $ /month
+	  Monthly Billing
+	  Yearly Billing 25% discount
 
-  Monthly Billing
-  Yearly Billing 25% discount
+	  Unlimited websites
+	  100% data ownership
+	  Email reports
 
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
+	  Start my trial
+  </div>
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
