--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 			<div class="box_top flex-container">
 				<div class="column"><span id="out_viewers">50k </span> Pageviews</div>
 				<div class="column">
-					<span class="price" id="out_price"> 
-					 12$ </span>  /month </div>
+					<span class="price" id="out_price"> $12.00 </span>  /month </div>
 			</div>
 			<div class="sliderdiv">
 				<input type="range" min="0" max="4" value="1" step="1" class="sliderNew" id="myRange">
