added "alt" attribute to image tags

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<span class="price" id="out_price"> $12.00 </span>  /month </div>
 			</div>
 			<div class="sliderdiv">
-				<input type="range" min="0" max="4" value="1" step="1" class="sliderNew" id="myRange">
+				<input type="range" name="rangeSlider" min="0" max="4" value="1" step="1" class="sliderNew" id="myRange">
 			</div>
 
 			 
@@ -46,9 +46,9 @@
 				<div class="flex-container">
 					<div class="column"> 
 						<ul class="no-bullets">
-							<li><image src="images/icon-check.svg" > Unlimited websites			</li>
-							<li><image src="images/icon-check.svg" > 100% data ownership			</li>
-							<li><image src="images/icon-check.svg" > Email reports			</li>
+							<li><image alt="-" src="images/icon-check.svg" > Unlimited websites			</li>
+							<li><image alt="-" src="images/icon-check.svg" > 100% data ownership			</li>
+							<li><image alt="-" src="images/icon-check.svg" > Email reports			</li>
 						</ul>
 					</div>
 					<div class="column"> 
